--- a/Suites/tp_01_suite_recc.ipynb
+++ b/Suites/tp_01_suite_recc.ipynb
@@ -896,6 +896,85 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "17**2 -4*16\n",
+    "import numpy as np\n",
+    "np.sqrt(225)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### corrections\n",
+    "\n",
+    "D'après le graphique la suite est croissante et converge semble-t-il vers une valeur L = 16\n",
+    "\n",
+    "2. Démonstration par récurrence\n",
+    "\n",
+    "- Initialisation\n",
+    "\n",
+    "$0 \\leq u_0 \\leq u_1 \\leq 16$\n",
+    "\n",
+    "$0 \\leq 0 \\leq 4 \\leq 16$\n",
+    "\n",
+    "Donc clairement cette dernière inégalité est vraie donc l'initialisation est vérifiée.\n",
+    "\n",
+    "- Héridité\n",
+    "\n",
+    "Supposons qu'au rang n que $P(n)$ soit vraie :\n",
+    "$0 \\leq u_n \\leq u_{n+1} \\leq 16$\n",
+    "\n",
+    "Essayons de démontre qu'alors $P(n+1)$ est vraie.\n",
+    "\n",
+    "Dérivons la fonction f(x) est dérivable sur $]0,16]$ et vaut : $f(x) = \\frac{3}{2\\sqrt{x}} \\geq 0$ pour toute valeur de x dans l'intervalle $]0,16]$. La fonction f est donc strictement croissante sur cette intervalle, on a donc :\n",
+    "\n",
+    "$0 = f(0) \\leq f(u_n) \\leq f(u_{n+1}) \\leq f(16) = 16$\n",
+    "\n",
+    "donc $0 \\leq u_{n+1} \\leq u_{n+2} \\leq 16$ et donc $P(n+1)$ est vraie, l'héridité est donc vérifiée.\n",
+    "\n",
+    "Conslusion nous vennons de démontrer par récurrence que $P(n)$ est vraie pour tout $n \\in [0,16]$.\n",
+    "\n",
+    "3. Convergence\n",
+    "\n",
+    "D'après ce qui précède la suite est croissante et majorée donc d'après le théorème de convergence monotone on peut affirmer que la suite $(u_n)$ est convergente vers une limite L.\n",
+    "\n",
+    "Comme d'une part $u_{n+1}=f(u_n)$ et d'autre part f est continue et croissante sur l'intervalle $[0,16]$ d'autre part nous avons montrer que pour tout valeur n la suite est telle que $u_n \\in [0,16]$. On en déduit d'après le théorème de convergence monotone que la suite converge vers une L que l'on détermine alors avec l'équation suivante : $f(L) = L$.\n",
+    "\n",
+    "$f(x) = x$ \n",
+    "\n",
+    "$3\\sqrt{x} +4 = x$\n",
+    "\n",
+    "$9 \\times x = (x - 4)^2$\n",
+    "\n",
+    "$9x = x^2 - 8x + 16$\n",
+    "\n",
+    "$9x = x^2 - 8x + 16$\n",
+    "\n",
+    "$9x = x^2 - 8x + 16$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
