--- a/Suites/tp_01_suite_recc.ipynb
+++ b/Suites/tp_01_suite_recc.ipynb
@@ -968,7 +968,9 @@
     "\n",
     "$9x = x^2 - 8x + 16$\n",
     "\n",
-    "$9x = x^2 - 8x + 16$\n",
+    "$x^2 - 17x + 16 = 0$\n",
+    "\n",
+    "En utilisant le discriminant on trouve deux valeurs $x_1 = 1$ et $x_2=16$ il est clair que $x_1$ n'a pas de sens on en déduit donc que la limite pour cette suite est $L=16$.\n",
     "\n",
     "\n",
     "\n",
